Add statements to parser, move some files around

--- a/source/Makefile
+++ b/source/Makefile
@@ -2,11 +2,11 @@ objects: parser scanner
 	ocamlc -c ast.ml parser.mli scanner.ml parser.ml
 
 parser: parser.mly
-	ocamlyacc parser.mly
+	ocamlyacc -v parser.mly
 
 scanner: scanner.mll
 	ocamllex scanner.mll
 
 .PHONY: clean
 clean:
-	rm -f parser.mli scanner.ml parser.ml *.cmo *.cmi
+	rm -f parser.mli scanner.ml parser.ml parser.output *.cmo *.cmi
