Starting to test everything by printing out ASTs

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,5 +1,10 @@
-objects: parser scanner
-	ocamlc -c ast.ml parser.mli scanner.ml parser.ml
+project: objects
+	ocamlc -o snl ast.cmo parser.cmo scanner.cmo snl.cmo
+
+objects: parser scanner snl
+	ocamlc -c ast.ml parser.mli scanner.ml parser.ml snl.ml
+
+snl: snl.ml
 
 parser: parser.mly
 	ocamlyacc -v parser.mly
@@ -9,4 +14,4 @@ scanner: scanner.mll
 
 .PHONY: clean
 clean:
-	rm -f parser.mli scanner.ml parser.ml parser.output *.cmo *.cmi
+	rm -f parser.mli scanner.ml parser.ml parser.output *.cmo *.cmi snl
