--- a/source/Makefile
+++ b/source/Makefile
@@ -1,10 +1,11 @@
-project: objects
-	ocamlc -o snl ast.cmo parser.cmo scanner.cmo snl.cmo
+ast_test: objects ast
+	ocamlc -o snl_ast ast.cmo parser.cmo scanner.cmo snl_ast.cmo
 
-objects: parser scanner snl
-	ocamlc -c ast.ml parser.mli scanner.ml parser.ml snl.ml
+ast: snl_ast.ml
+	ocamlc -c snl_ast.ml
 
-snl: snl.ml
+objects: parser scanner
+	ocamlc -c ast.ml parser.mli scanner.ml parser.ml
 
 parser: parser.mly
 	ocamlyacc -v parser.mly
@@ -14,4 +15,4 @@ scanner: scanner.mll
 
 .PHONY: clean
 clean:
-	rm -f parser.mli scanner.ml parser.ml parser.output *.cmo *.cmi snl
+	rm -f parser.mli scanner.ml parser.ml parser.output *.cmo *.cmi snl_ast
