--- a/source/Makefile
+++ b/source/Makefile
@@ -1,8 +1,11 @@
-ast_test: objects ast
-	ocamlc -o snl_ast ast.cmo parser.cmo scanner.cmo snl_ast.cmo
+ast_test: objects java ast
+	ocamlc -o snl_ast ast.cmo parser.cmo scanner.cmo codegen.cmo snl_ast.cmo
 
 ast: snl_ast.ml
 	ocamlc -c snl_ast.ml
+
+java: codegen.ml
+	ocamlc -c codegen.ml
 
 objects: parser scanner
 	ocamlc -c ast.ml parser.mli scanner.ml parser.ml
@@ -19,4 +22,4 @@ test: ast_test
 
 .PHONY: clean
 clean:
-	rm -f parser.mli scanner.ml parser.ml parser.output *.cmo *.cmi snl_ast
+	rm -f parser.mli scanner.ml parser.ml parser.output *.cmo *.cmi snl_ast *~
