Add diagnostics checking to recipe internals

--- a/source/Makefile
+++ b/source/Makefile
@@ -1,17 +1,11 @@
-ast_test: touch objects java compiler
+compiler: snlc.ml objects
+	ocamlc -c snlc.ml
 	ocamlc -o snlc ast.cmo parser.cmo scanner.cmo str.cma codegen.cmo analyzer.cmo snlc.cmo
 
-touch:
-	touch codegen.ml
+objects: scanner parser generator
+	ocamlc -c ast.ml sast.ml parser.mli scanner.ml parser.ml analyzer.ml codegen.ml
 
-compiler: snlc.ml
-	ocamlc -c snlc.ml
-
-java: codegen.ml
-	ocamlc -c codegen.ml
-
-objects: parser scanner
-	ocamlc -c ast.ml sast.ml parser.mli scanner.ml parser.ml analyzer.ml
+generator: analyzer.ml codegen.ml
 
 parser: parser.mly
 	ocamlyacc -v parser.mly
@@ -20,7 +14,7 @@ scanner: scanner.mll
 	ocamllex scanner.mll
 
 .PHONY: test
-test: ast_test
+test: compiler
 	./run_tests.py
 
 .PHONY: clean
